// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compose action queries "fetch" action custom endpoint 1`] = `
{
  "alias": "cOrg",
  "changeset": [],
  "kind": "fetch-one",
  "model": "Org",
  "query": {
    "filter": {
      "args": [
        {
          "kind": "alias",
          "namePath": [
            "Org",
            "id",
          ],
        },
        {
          "kind": "literal",
          "type": "integer",
          "value": 1,
        },
      ],
      "kind": "function",
      "name": "is",
    },
    "fromPath": [
      "Org",
    ],
    "kind": "query",
    "limit": undefined,
    "modelRefKey": "Org",
    "name": "$query",
    "offset": undefined,
    "orderBy": undefined,
    "refKey": "N/A",
    "retType": "Org",
    "select": [
      {
        "alias": "name",
        "kind": "field",
        "name": "name",
        "namePath": [
          "Org",
          "name",
        ],
        "refKey": "Org.name",
      },
    ],
  },
}
`;

exports[`compose action queries "fetch" action native endpoint 1`] = `
{
  "alias": "$$target_0",
  "changeset": [
    {
      "name": "name",
      "setter": {
        "fieldsetAccess": [
          "name",
        ],
        "kind": "fieldset-input",
        "required": false,
        "type": "text",
      },
    },
    {
      "name": "description",
      "setter": {
        "fieldsetAccess": [
          "description",
        ],
        "kind": "fieldset-input",
        "required": false,
        "type": "text",
      },
    },
  ],
  "filter": undefined,
  "kind": "update-one",
  "model": "Org",
  "select": [],
  "targetPath": [
    "$target_0",
  ],
}
`;

exports[`compose model queries example with nested filters 1`] = `
[
  {
    "filter": {
      "args": [
        {
          "args": [
            {
              "kind": "alias",
              "namePath": [
                "Org",
                "repos",
                "org",
                "id",
              ],
            },
            {
              "kind": "literal",
              "type": "integer",
              "value": 1,
            },
          ],
          "kind": "function",
          "name": "is",
        },
        {
          "kind": "alias",
          "namePath": [
            "Org",
            "repos",
            "is_active",
          ],
        },
      ],
      "kind": "function",
      "name": "and",
    },
    "fromPath": [
      "Org",
      "repos",
    ],
    "kind": "query",
    "limit": undefined,
    "modelRefKey": "Org",
    "name": "repos_if_one",
    "offset": undefined,
    "orderBy": undefined,
    "refKey": "Org.repos_if_one",
    "retType": "Repo",
    "select": [],
  },
]
`;

exports[`compose model queries nested example without filters 1`] = `
[
  {
    "filter": undefined,
    "fromPath": [
      "Org",
      "repos",
      "org",
    ],
    "kind": "query",
    "limit": undefined,
    "modelRefKey": "Org",
    "name": "back_to_org",
    "offset": undefined,
    "orderBy": undefined,
    "refKey": "Org.back_to_org",
    "retType": "Org",
    "select": [],
  },
]
`;

exports[`compose model queries order and limit 1`] = `
{
  "filter": undefined,
  "fromPath": [
    "Org",
    "repos",
  ],
  "kind": "query",
  "limit": 5,
  "modelRefKey": "Org",
  "name": "recent_repos",
  "offset": undefined,
  "orderBy": [
    {
      "direction": "desc",
      "exp": {
        "kind": "alias",
        "namePath": [
          "Org",
          "repos",
          "id",
        ],
      },
    },
  ],
  "refKey": "Org.recent_repos",
  "retType": "Repo",
  "select": [],
}
`;
